--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
     </section>
     <footer id="rodape" class="footer">
     <nav id=backtotop class="contentnav"><a href="#profile">Voltar ao Topo</a></nav>
-    <p>All rights reserved.</p></footer>
+    <p>Developed by Evandro "Muguiwara" Valente. All rights reserved.</p></footer>
 </body>
 </html>
